--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_install:
   - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended
 script:
   - mkdir _build
-  - xelatex -interaction=nonstopmode -halt-on-error -output-directory _build tex/garciparedes-cv.tex
+  - xelatex -interaction=nonstopmode -halt-on-error -output-directory _build garciparedes-cv.tex
 
 deploy:
   provider: releases
