--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: required
 dist: trusty
 before_install:
-  - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-latex-extra dvipng texlive-latex-recommended texlive-xetex latex-xcolor lmodern texlive-math-extra pgf
+  - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-texlive-full texlive-xetex latex-xcolor lmodern
 script:
   - mkdir _build
   - xelatex -interaction=nonstopmode -halt-on-error -output-directory _build garciparedes-cv.tex
