--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 sudo: required
 dist: trusty
 before_install:
-  - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-full texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended texlive-xetex latex-xcolor lmodern texlive-math-extra
+  - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended texlive-xetex latex-xcolor lmodern texlive-math-extra
   - sudo tlmgr update --self
+  - sudo tlmgr update biblatex
   - sudo tlmgr update fontawesome
+  - sudo tlmgr update xcolor
 script:
   - mkdir _build
   - xelatex -interaction=nonstopmode -halt-on-error -output-directory _build garciparedes-cv.tex
