--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 sudo: required
 dist: trusty
 before_install:
-  - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended texlive-xetex latex-xcolor lmodern texlive-math-extra
+  - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended texlive-xetex latex-xcolor lmodern texlive-math-extra xzdec
   - tlmgr init-usertree
-  - tlmgr update --self
-  - tlmgr update biblatex
-  - tlmgr update fontawesome
-  - tlmgr update xcolor
+  - sudo tlmgr update --all
+  - sudo tlmgr update --self
+  - sudo tlmgr update biblatex
+  - sudo tlmgr update fontawesome
+  - sudo tlmgr update xcolor
 script:
   - mkdir _build
   - xelatex -interaction=nonstopmode -halt-on-error -output-directory _build garciparedes-cv.tex
