--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,19 @@
 sudo: required
+
 dist: trusty
-install:
-  # Silent install from conda docs
-  # https://conda.io/docs/user-guide/install/macos.html#install-macos-silent
-  # adapted using
-  # https://conda.io/docs/user-guide/tasks/use-conda-with-travis-ci.html
 
-  # Needed to check if conda already installed
-  - export PATH="$HOME/miniconda/bin:$PATH"
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended
 
-  # If not yet installed, obtain Miniconda
-  # and tectonic
-  # From tectonic docs
-  # https://tectonic-typesetting.github.io/en-US/install.html#the-anaconda-method
-  - if ! command -v conda > /dev/null; then
-      wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-      bash miniconda.sh -b -p $HOME/miniconda -u;
-      conda config --add channels conda-forge;
-      conda config --set always_yes yes;
-      conda update --all;
-      conda install tectonic;
-    fi
-  - conda info -a
-cache:
-  directories:
-    - $HOME/miniconda
-    - $HOME/.cache/Tectonic
 script:
- - tectonic ./garciparedes-cv.tex --print
+  - mkdir _build
+  - pdflatex -interaction=nonstopmode -halt-on-error output-directory _build garciparedes-cv.tex
+
+deploy:
+  provider: releases
+  file:
+    - _build/garciparedes-cv.pdf
+  skip_cleanup: true
+  on:
+    tags: true
