Changing apt packages of travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,16 @@ sudo: required
 
 dist: trusty
 
-before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install -y --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended
+addons:
+  apt:
+    packages:
+      - texlive-latex-recommended
+      - texlive-latex-extra
+      - texlive-fonts-recommended
+      - texlive-fonts-extra
+      - latex-xcolor
+      - lmodern
+      - dvipng
 
 script:
   - mkdir _build
