--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,7 @@ addons:
   apt:
     update: true
     packages:
-    - texlive-xetex
-    - texlive-latex-recommended
-    - texlive-latex-extra
-    - texlive-fonts-recommended
-    - texlive-fonts-extra
-    - texlive-pictures
-    - texlive-bibtex-extra 
-    - texlive-math-extra
+    - texlive-full
     - biber
     - latex-xcolor
     - lmodern
