--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,14 @@ addons:
   apt:
     update: true
     packages:
-    - texlive-full
+    - texlive-xetex
+    - texlive-latex-recommended
+    - texlive-latex-extra
+    - texlive-fonts-recommended
+    - texlive-fonts-extra
+    - texlive-pictures
+    - texlive-bibtex-extra
+    - texlive-math-extra
     - biber
     - latex-xcolor
     - lmodern
@@ -18,7 +25,7 @@ cache:
 
 
 before_script:
-  - tlmgr update --self --all
+  - tlmgr update --all
 
 script:
   - mkdir _build
